# dllInjectionLib

./: .gitignore  CMakeLists.txt  build.bat
include/dllInjLib/: dllInj.h
src/: CMakeLists.txt  dllInj.cpp  dllInj.h
